5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1575_1327.log
== TEST (2019-03-12 11:27:28) 
-- CODE:
total = 90
heraclito = 55
diferenca = total - heraclito
print(difereca)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(difereca)
NameError: name 'difereca' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:27:42) 
-- CODE:
total = 90
heraclito = 55
diferenca = total - heraclito
print(diferenca)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:27:46) 
-- CODE:
total = 90
heraclito = 55
diferenca = total - heraclito
print(diferenca)
-- EXECUTION TIME:
0.198875
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
